# docs/swagger.json
@@ -1,73 +1,44 @@
 {
     "swagger": "2.0",
     "info": {
-        "contact": {}
-    },
-    "paths": {
-        "/": {
-            "get": {
-                "description": "do ping",
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "example"
-                ],
-                "summary": "ping example",
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "schema": {
-                            "type": "string"
-                        }
-                    }
-                }
-            }
+        "description": "This is a sample Lector OCR server.",
+        "title": "Lector OCR API",
+        "termsOfService": "http://swagger.io/terms/",
+        "contact": {
+            "name": "Héctor González",
+            "url": "http://github.com/hectorgool/ocr",
+            "email": "hector.gonzalez@bunsan.io"
         },
+        "license": {
+            "name": "Apache 2.0",
+            "url": "http://www.apache.org/licenses/LICENSE-2.0.html"
+        },
+        "version": "1.0"
+    },
+    "host": "localhost:8080",
+    "basePath": "/api/v1",
+    "paths": {
         "/logs": {
             "get": {
-                "description": "do ping",
-                "consumes": [
-                    "application/json"
-                ],
+                "description": "Get a json with, id, Endpoint, Method, Input, Output, CreatedOn, stored in log_db of database",
                 "produces": [
                     "application/json"
                 ],
                 "tags": [
-                    "example"
+                    "bunsan"
                 ],
-                "summary": "ping example",
+                "summary": "Get a json with the fields in the table log_db of database",
                 "responses": {
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "type": "string"
-                        }
-                    }
-                }
-            }
-        },
-        "/number": {
-            "get": {
-                "description": "do ping",
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "example"
-                ],
-                "summary": "ping example",
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "schema": {
-                            "type": "string"
+                            "type": "object",
+                            "additionalProperties": {
+                                "type": "array",
+                                "items": {
+                                    "type": "string"
+                                }
+                            }
                         }
                     }
                 }
@@ -75,7 +46,7 @@
         },
         "/numbers": {
             "post": {
-                "description": "do ping",
+                "description": "Send data to the server to proces the numbers of the OCR, the list of numbers must be code in base64 for proces",
                 "consumes": [
                     "application/json"
                 ],
@@ -83,14 +54,20 @@
                     "application/json"
                 ],
                 "tags": [
-                    "example"
+                    "bunsan"
                 ],
-                "summary": "ping example",
+                "summary": "send data to the server to proces the numbers of the OCR",
                 "responses": {
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "type": "string"
+                            "type": "object",
+                            "additionalProperties": {
+                                "type": "array",
+                                "items": {
+                                    "type": "string"
+                                }
+                            }
                         }
                     }
                 }
